@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*gdb-7.1 (19 Mar 2010)
+
+  19 Mar 2010; <zorry@gentoo.org> -gdb-7.0.50.20100119.ebuild,
+  +gdb-7.1.ebuild:
+  New Gdb 7.1 release built-in PIE support.
+
   24 Jan 2010; <zorry@gentoo.org> gdb-7.0.50.20100119.ebuild:
   Use the weekly build instead.
 
